[package]
name = "git-overlapping"
version = "0.1.0"
edition = "2021"

[dependencies.futures-io]
git = "https://github.com/rust-lang/futures-rs"
rev = "b7bfade372ee43f3ce9da356b95a5c95373c7641"

[dependencies.futures-sink]
git = "https://github.com/rust-lang/futures-rs"
rev = "b7bfade372ee43f3ce9da356b95a5c95373c7641"
default-features = false

[dependencies.futures-task]
git = "https://github.com/rust-lang/futures-rs"
rev = "b7bfade372ee43f3ce9da356b95a5c95373c7641"
