[package]
name = "git-repo-with-many-crates"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "*"
git = "https://github.com/tokio-rs/tokio.git"
rev = "ba81945ffc2695b71f2bbcadbfb5e46ec55aaef3"
features = ["rt", "macros"]

[dependencies.tokio-util]
version = "*"
git = "https://github.com/tokio-rs/tokio.git"
rev = "ba81945ffc2695b71f2bbcadbfb5e46ec55aaef3"
