[package]
name = "git-repo-with-many-crates"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "*"
git = "https://github.com/tokio-rs/tokio.git"
rev = "f3ce29a0038c04094c39915c0221c8e428fe7ac3"
features = ["rt", "macros"]

[dependencies.tokio-util]
version = "*"
git = "https://github.com/tokio-rs/tokio.git"
rev = "f3ce29a0038c04094c39915c0221c8e428fe7ac3"
