# Regression test for https://github.com/ipetkov/crane/issues/13
[package]
name = "git-rev-no-ref"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
git = "https://github.com/tokio-rs/tokio"
branch = "tokio-1.20.x"

[dependencies.tokio2]
git = "https://github.com/tokio-rs/tokio"
rev = "9241c3eddf4a6a218681b088d71f7191513e2376" # Coming from tokio-1.18.4
package = "tokio"
