# Regression test for https://github.com/ipetkov/crane/issues/13
[package]
name = "git-rev-no-ref"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
git = "https://github.com/tokio-rs/tokio"
branch = "tokio-1.20.x"

[dependencies.tokio2]
git = "https://github.com/tokio-rs/tokio"
rev = "171ce0ff8d38b87a39c1e6a16fedc9a2373720e0" # Coming from tokio-1.18.5
package = "tokio"
