[package]
name = "simple-git"
version = "0.1.0"
edition = "2021"

[dependencies.byteorder]
version = "*"
git = "https://github.com/BurntSushi/byteorder.git"

[dependencies.crane-test-repo]
package = "print"
git = "https://github.com/ipetkov/crane-test-repo"
branch = "something/or/other"

[dependencies.libc]
version = "*"
git = "https://github.com/rust-lang/libc.git"
branch = "main"

[dependencies.num_cpus]
version = "*"
git = "https://github.com/seanmonstar/num_cpus.git"
tag = "v1.13.1"

[dependencies.rustversion]
version = "*"
git = "https://github.com/dtolnay/rustversion.git"
rev = "2abd4d0e00db08bb91145cb88e5dcbad2f45bbcb"

# Intentionally unused patch dependency
# https://github.com/ipetkov/crane/issues/576
[patch.crates-io]
unicode-ident = { git = "https://github.com/dtolnay/unicode-ident.git", rev = "a8736e7e62be959d87970d2d137a098ba533d78b" }
