[workspace]
members = ["./member/foo"]

[workspace.lints.rust]
### Note: cannot "forbid" lint groups due to https://doc.rust-lang.org/rustc/lints/listing/warn-by-default.html#forbidden-lint-groups
### allowed-by-default lints
absolute-paths-not-starting-with-crate = "forbid"
box-pointers = "forbid"
deprecated-in-future = "forbid"
elided-lifetimes-in-paths = "forbid"
explicit-outlives-requirements = "forbid"
ffi-unwind-calls = "forbid"
# fuzzy-provenance-casts = "forbid" # unstable only
keyword-idents = "forbid"
let-underscore-drop = "forbid"
# lossy-provenance-casts = "forbid" # unstable only
macro-use-extern-crate = "forbid"
meta-variable-misuse = "forbid"
missing-abi = "forbid"
missing-copy-implementations = "forbid"
missing-debug-implementations = "forbid"
missing-docs = "warn"
# multiple-supertrait-upcastable = "forbid" # unstable only
# must-not-suspend = "forbid"
non-ascii-idents = "forbid"
# non-exhaustive-omitted-patterns = "forbid" # unstable only
rust-2021-incompatible-closure-captures = "forbid"
rust-2021-incompatible-or-patterns = "forbid"
rust-2021-prefixes-incompatible-syntax = "forbid"
rust-2021-prelude-collisions = "forbid"
single-use-lifetimes = "forbid"
trivial-casts = "forbid"
trivial-numeric-casts = "forbid"
# unnameable-types = "forbid" # unstable only
unreachable-pub = "forbid"
unsafe-code = "forbid"
unsafe-op-in-unsafe-fn = "forbid"
unstable-features = "forbid"
unused-crate-dependencies = "warn"
unused-extern-crates = "deny"
unused-import-braces = "forbid"
unused-lifetimes = "forbid"
unused-macro-rules = "forbid"
unused-qualifications = "forbid"
unused-results = "forbid"
unused-tuple-struct-fields = "forbid"
variant-size-differences = "forbid"
### warn-by-default lints
ambiguous-glob-imports = "forbid"
ambiguous-glob-reexports = "forbid"
anonymous-parameters = "forbid"
array-into-iter = "forbid"
asm-sub-register = "forbid"
async-fn-in-trait = "forbid"
bad-asm-style = "forbid"
bare-trait-objects = "forbid"
break-with-label-and-loop = "forbid"
byte-slice-in-packed-struct-with-derive = "forbid"
clashing-extern-declarations = "forbid"
coherence-leak-check = "forbid"
confusable-idents = "forbid"
const-evaluatable-unchecked = "forbid"
const-item-mutation = "forbid"
const-patterns-without-partial-eq = "forbid"
dead-code = "deny"
deprecated = "forbid"
deprecated-where-clause-location = "forbid"
deref-into-dyn-supertrait = "forbid"
deref-nullptr = "forbid"
dropping-copy-types = "forbid"
dropping-references = "forbid"
drop-bounds = "forbid"
duplicate-macro-attributes = "forbid"
dyn-drop = "forbid"
elided-lifetimes-in-associated-constant = "forbid"
ellipsis-inclusive-range-patterns = "forbid"
exported-private-dependencies = "forbid"
forbidden-lint-groups = "forbid"
forgetting-copy-types = "forbid"
forgetting-references = "forbid"
for-loops-over-fallibles = "forbid"
function-item-references = "forbid"
hidden-glob-reexports = "forbid"
illegal-floating-point-literal-pattern = "forbid"
improper-ctypes = "forbid"
improper-ctypes-definitions = "forbid"
incomplete-features = "forbid"
indirect-structural-match = "forbid"
inline-no-sanitize = "forbid"
internal-features = "forbid"
invalid-doc-attributes = "forbid"
invalid-from-utf8 = "forbid"
invalid-macro-export-arguments = "forbid"
invalid-nan-comparisons = "forbid"
invalid-value = "forbid"
irrefutable-let-patterns = "forbid"
large-assignments = "forbid"
late-bound-lifetime-arguments = "forbid"
legacy-derive-helpers = "forbid"
map-unit-fn = "forbid"
mixed-script-confusables = "forbid"
named-arguments-used-positionally = "forbid"
nontrivial-structural-match = "forbid"
non-camel-case-types = "forbid"
non-fmt-panics = "forbid"
non-shorthand-field-patterns = "forbid"
non-snake-case = "forbid"
non-upper-case-globals = "forbid"
noop-method-call = "forbid"
no-mangle-generic-items = "forbid"
opaque-hidden-inferred-bound = "forbid"
overlapping-range-endpoints = "forbid"
path-statements = "forbid"
pointer-structural-match = "forbid"
private-bounds = "forbid"
private-interfaces = "forbid"
redundant-semicolons = "forbid"
refining-impl-trait = "forbid"
renamed-and-removed-lints = "forbid"
repr-transparent-external-private-fields = "forbid"
semicolon-in-expressions-from-macros = "forbid"
special-module-name = "forbid"
stable-features = "forbid"
suspicious-auto-trait-impls = "forbid"
suspicious-double-ref-op = "forbid"
temporary-cstring-as-ptr = "forbid"
trivial-bounds = "forbid"
type-alias-bounds = "forbid"
tyvar-behind-raw-pointer = "forbid"
uncommon-codepoints = "forbid"
unconditional-recursion = "forbid"
undefined-naked-function-abi = "forbid"
unexpected-cfgs = "forbid"
# unfulfilled-lint-expectations = "forbid" # unstable only
ungated-async-fn-track-caller = "forbid"
uninhabited-static = "forbid"
unknown-lints = "forbid"
# unknown-or-malformed-diagnostic-attributes = "forbid" # unstable only
unnameable-test-items = "forbid"
unreachable-code = "forbid"
unreachable-patterns = "forbid"
unstable-name-collisions = "forbid"
unstable-syntax-pre-expansion = "forbid"
unsupported-calling-conventions = "forbid"
unused-allocation = "forbid"
unused-assignments = "forbid"
unused-associated-type-bounds = "forbid"
unused-attributes = "forbid"
unused-braces = "forbid"
unused-comparisons = "forbid"
unused-doc-comments = "forbid"
unused-features = "forbid"
unused-imports = "forbid"
unused-labels = "forbid"
unused-macros = "forbid"
unused-must-use = "forbid"
unused-mut = "forbid"
unused-parens = "forbid"
unused-unsafe = "forbid"
unused-variables = "forbid"
useless-ptr-null-checks = "forbid"
where-clauses-object-safety = "forbid"
while-true = "forbid"
### deny-by-default lints
ambiguous-associated-items = "forbid"
arithmetic-overflow = "forbid"
bindings-with-variant-name = "forbid"
cenum-impl-drop-cast = "forbid"
coinductive-overlap-in-coherence = "forbid"
conflicting-repr-hints = "forbid"
deprecated-cfg-attr-crate-type-name = "forbid"
enum-intrinsics-non-enums = "forbid"
ill-formed-attribute-input = "forbid"
implied-bounds-entailment = "forbid"
incomplete-include = "forbid"
ineffective-unstable-trait-impl = "forbid"
invalid-atomic-ordering = "forbid"
invalid-from-utf8-unchecked = "forbid"
invalid-reference-casting = "forbid"
invalid-type-param-default = "forbid"
let-underscore-lock = "forbid"
long-running-const-eval = "forbid"
macro-expanded-macro-exports-accessed-by-absolute-paths = "forbid"
missing-fragment-specifier = "forbid"
mutable-transmutes = "forbid"
named-asm-labels = "forbid"
no-mangle-const-items = "forbid"
order-dependent-trait-objects = "forbid"
overflowing-literals = "forbid"
patterns-in-fns-without-body = "forbid"
proc-macro-back-compat = "forbid"
proc-macro-derive-resolution-fallback = "forbid"
pub-use-of-private-extern-crate = "forbid"
soft-unstable = "forbid"
# test-unstable-lint = "forbid" # unstable only
text-direction-codepoint-in-comment = "forbid"
text-direction-codepoint-in-literal = "forbid"
unconditional-panic = "forbid"
undropped-manually-drops = "forbid"
unknown-crate-types = "forbid"
useless-deprecated = "forbid"

