[package]
name = "crane-test-crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Prevent crane from rebuilding dependencies unnecessarily (https://github.com/ipetkov/crane/issues/370)
[profile.dev.build-override]
debug = false

[[bin]]
name = "test-bzip2-sys"
path = "src/main.rs"

[dependencies]
bzip2-sys = "=0.1.11"
