[package]
name = "my-common"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
