[package]
name = "tauri"
version = "0.1.0"
description = "Tauri App"
authors = ["nix"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.4", features = [] }

[dependencies]
tauri = { version = "1.2.4" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
